--- a/Adimo Imobiliaria/public_html/PaginaInicial.html
+++ b/Adimo Imobiliaria/public_html/PaginaInicial.html
@@ -12,8 +12,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="icon" href="img/logo_adimo.png"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-        
     </head>
+        <-<!-- teste -->
 
     <header>
         <nav class="navbar navbar-expand-lg navbar-light  shadow fixed-top" style="background-color: #72383D;">
